<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background_color"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Facility"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/facility_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Facility Name (REQUIRED)"
        android:background="@drawable/rounded_input"
        android:padding="15dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/facility_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email (REQUIRED)"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_input"
        android:padding="15dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/facility_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number (OPTIONAL)"
        android:inputType="phone"
        android:background="@drawable/rounded_input"
        android:padding="15dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/facility_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Save"
        android:textColor="@color/active_button_color"
        android:backgroundTint="@color/container_background" />
</LinearLayout>