<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/createEventSaveButton"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/createEventMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/eventPosterImage"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/uploadEventPosterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:text="Upload Event Poster"
                android:textColor="@color/active_button_color"
                android:backgroundTint="@color/container_background" />

            <TextView
                android:id="@+id/createEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/active_button_color"
                android:text="Page Title" />

            <EditText
                android:id="@+id/eventNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Event Name (Required)"
                android:background="@drawable/rounded_input"
                android:padding="15dp"
                android:layout_marginBottom="15dp" />

            <EditText
                android:id="@+id/eventDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Event Description (Optional)"
                android:background="@drawable/rounded_input"
                android:padding="15dp"
                android:layout_marginBottom="15dp" />

            <EditText
                android:id="@+id/eventLocationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_input"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:hint="Event Location (Optional)" />

            <EditText
                android:id="@+id/eventLimitInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_input"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:hint="Waitlist Limit (Optional)"
                android:inputType="number" />

            <EditText
                android:id="@+id/selectedLimitInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_input"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:hint="Selected Limit (Optional)"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/geolocationCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Geolocation"
                android:textColor="@color/active_button_color"
                app:buttonTint="@color/active_button_color" />

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/createEventCancelButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginStart="88dp"
        android:backgroundTint="@color/negative_button_color"
        android:text="Cancel"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createEventSaveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="0.526" />

    <Button
        android:id="@+id/createEventSaveButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="@color/positive_button_color"
        android:text="Save"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/createEventCancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>
